--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,7 +21,9 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "scheme": "myapp",
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     }
   }
