--- a/react-native-tabs/package.json
+++ b/react-native-tabs/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "google-sdg-app",
+  "name": "react-native-tabs",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.4",
-    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.17.2",
-    "native-base": "^3.4.25",
-    "nativewind": "^2.0.11",
+    "expo-system-ui": "~2.2.1",
+    "expo-web-browser": "~12.1.1",
+    "expo-router": "^1.0.0-rc5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "tailwindcss": "^3.2.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~48.0.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^4.9.4"
-  },
-  "overrides": {
-    "metro": "0.73.7",
-    "metro-resolver": "0.73.7"
   },
   "private": true
 }
