--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~48.0.4",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
+    "expo-location": "^15.1.1",
     "expo-router": "^1.2.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
@@ -23,6 +24,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-dotenv": "^3.4.8",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
@@ -31,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
