Added form functionality for adding images

--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
-      ]
+      ],
+      ["expo-image-picker"]
     ],
     "name": "google-sdg-app",
     "slug": "google-sdg-app",
