--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "^15.1.1",
     "expo-router": "^1.2.0",
