--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@faker-js/faker": "^7.6.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "overrides": {
