--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "^15.1.1",
     "expo-router": "^1.2.0",
