--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
