--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "^7.0.0",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "^15.1.1",
     "expo-router": "^1.2.0",
@@ -32,6 +35,7 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-query": "^3.39.3"
