--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-community/datetimepicker": "^7.0.0",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@types/react-native-snap-carousel": "^3.8.5",
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
@@ -24,7 +24,6 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "native-base": "^3.4.25",
-    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -46,7 +45,6 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
