--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/storage": "^17.3.2",
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.1.6",
     "expo-font": "~11.1.1",
     "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "^15.1.1",
     "expo-router": "^1.2.0",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.17.2",
+    "firebase": "^9.18.0",
     "native-base": "^3.4.25",
     "nativewind": "^2.0.11",
+    "pod-install": "^0.1.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
