--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "^0.71.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
