--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "expo-router": "^1.2.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
+    "moment": "^2.29.4",
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.3",
     "react-native": "^0.71.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-geolocation-service": "^5.3.1",
