--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-community/datetimepicker": "6.7.3",
     "@types/react-native-snap-carousel": "^3.8.5",
     "dotenv": "^16.0.3",
@@ -29,9 +30,11 @@
     "react-native": "0.71.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
