--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-moment": "^1.1.3",
     "react-native": "^0.71.4",
     "react-native-dotenv": "^3.4.8",
+    "react-native-geocoder": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
